v 0.9.9

- fixed a bug in LilyPondExport (Tempo changes are done correctly now!)
- found a bug in ApplyPitchCurve. no fix yet. workaround: load sequences into GlissandoContainer before executing the function.	

v 0.9.8
September 25, 2012

- fixed a bug in ImportFrequencies
- fixed a bug in PitchGridContainer
- fixed a bug in TimeGridContainer
- fixed a bug in TempoChange
- fixed bugs in CsoundPlayer
- found a bug in AudioFilePlayer. no fix yet. workaround: avoid umlaute in filepaths!
- added lion support
- added function: ApplyPitchCurve
- added feature in GlissandoContainer, s/e automatically adjusts glissandoStart/glissandoEnd 
- added progress/feedback to document tasks
- fixed a bug in JoinByFrequency
- optimized performance of OneVoice_Loudest

_________________________________________________________________

v 0.9.7.1
August 17, 2011

- fixed a bug that prevented sessions containing PitchCurves to be saved correctly
_________________________________________________________________

v 0.9.7
August 16, 2011

- added function: AlignOnFreq
- added function: EqlDstrbtn_Freq
- added function: EqlDstrbtn_Pitch
- added function: ExtractFrequencyVertexes 
- added function: FixGlissandoEndPoints
- added function: FixGlissandoStartPoints
- added function: PitchQuantization
- added function: Seq2PitchCurve
- added function: Transpose

- added ContainerView: CentContainer
- added ContainerView: GlissandoContainer
- added ContainerView: PitchCurveContainer
- added ContainerView: PitchGridContainer

- added ChildView: GlissandoChild

- added type: PitchCurve

- added glissando support for LilyPondExport
- CsoundPlayer: new feature to assign objects to csound orc modes using parameters: "csoundMode" <string> or "csoundInstrumentNumber <number>
- optimized performance of OneVoice_Loudest
- new feature: adjustable y-axis parameter range
- new feature: show/hide guidelines
- minor gui design improvements
- added a pitch tab to CreateGridSequence